--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Build & Push Docker Images
+name: Build & Push Docker Images for Little-Pigs_LogMeIn
 
 on:
   push:
@@ -7,29 +7,45 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push backend image
+      # Backend
+      - name: Build and push BACKEND image
         uses: docker/build-push-action@v5
         with:
           context: ./backend
           file: ./backend/Dockerfile
           push: true
-          tags: cedricteyc/logmein-backend:latest
+          tags: cedricteyc/littlepigs-backend:latest
 
-      - name: Build and push frontend image
+      # Frontend
+      - name: Build and push FRONTEND image
         uses: docker/build-push-action@v5
         with:
           context: ./frontend
           file: ./frontend/Dockerfile
           push: true
-          tags: cedricteyc/logmein-frontend:latest
+          tags: cedricteyc/littlepigs-frontend:latest
+
+      # (Optionnel) Nginx
+      # - name: Build and push NGINX image
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     context: ./nginx
+      #     file: ./nginx/Dockerfile
+      #     push: true
+      #     tags: cedricteyc/littlepigs-nginx:latest
+
+    env:
+      DOCKER_BUILDKIT: 1
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+
+    # Auth Docker Hub (si tu utilises build-push-action, il le fait souvent auto, mais on peut forcer l'auth avant si souci)
+    # - name: Login to DockerHub
+    #   uses: docker/login-action@v3
+    #   with:
+    #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+    #     password: ${{ secrets.DOCKERHUB_TOKEN }}
