--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: Full DevSecOps CI/CD Pipeline
+name: DevSecOps CI/CD Pipeline
 
 on:
   push:
@@ -10,135 +10,119 @@ permissions:
   contents: read
   security-events: write
 
-env:
-  DOCKER_BUILDKIT: 1
-
 jobs:
-  security:
-    name: 🛡️ Security & Quality (Trivy, Bandit, Flake8)
+  quality-security:
+    name: 🔎 Security & Quality (Trivy, Bandit, Flake8)
     runs-on: ubuntu-latest
-    outputs:
-      summary: ${{ steps.summary.outputs.summary }}
-    steps:
-      - name: 📦 Checkout code
-        uses: actions/checkout@v4
-
-      - name: 🧪 Trivy filesystem scan (code, deps, secrets)
-        id: trivy-fs
-        uses: aquasecurity/trivy-action@master
-        with:
-          scan-type: fs
-          scan-ref: .
-          format: table
-          severity: CRITICAL,HIGH
-          exit-code: 0   # on ne bloque pas ici, juste summary
-          output: trivy-fs.txt
-
-      - name: 🐍 Bandit - Python security linter
-        id: bandit
-        uses: tj-actions/bandit@v5
-        with:
-          path: backend/
-          output: bandit-result.txt
-
-      - name: 🔎 Flake8 - Python linter
-        id: flake8
-        uses: py-actions/flake8@v2
-        with:
-          path: backend/
-          output: flake8-report.txt
-
-      # Générer un résumé (summary) avec un script JS GitHub Actions
-      - name: 📝 Generate summary report
-        id: summary
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const fs = require('fs');
-            let trivy = fs.existsSync('trivy-fs.txt') ? fs.readFileSync('trivy-fs.txt', 'utf-8') : '';
-            let bandit = fs.existsSync('bandit-result.txt') ? fs.readFileSync('bandit-result.txt', 'utf-8') : '';
-            let flake8 = fs.existsSync('flake8-report.txt') ? fs.readFileSync('flake8-report.txt', 'utf-8') : '';
-            let summary = "## Résumé sécurité & qualité\n";
-            summary += "### Trivy (FS)\n" + (trivy || "Aucun résultat") + "\n";
-            summary += "### Bandit\n" + (bandit || "Aucun résultat") + "\n";
-            summary += "### Flake8\n" + (flake8 || "Aucun résultat") + "\n";
-            core.setOutput('summary', summary);
-            core.summary.addRaw(summary).write();
-
-  test:
-    name: 🧪 Pytest (unit tests)
-    runs-on: ubuntu-latest
-    needs: security
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Bandit - Python security scan (backend)
+        uses: tj-actions/bandit@v5
+        with:
+          targets: backend/app.py
+
+      - name: Flake8 - Python linter (backend)
+        uses: py-actions/flake8@v2
+        with:
+          args: backend/app.py
+
+      - name: Trivy (filesystem) - Scan codebase
+        uses: aquasecurity/trivy-action@v0.16.2
+        with:
+          scan-type: "fs"
+          scan-ref: "."
+          format: "table"
+          severity: "CRITICAL,HIGH"
+
+  pytest:
+    name: 🧪 Pytest (unit tests)
+    runs-on: ubuntu-latest
+    needs: quality-security
+    steps:
+      - uses: actions/checkout@v4
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - name: Install dependencies
+      - name: Install backend dependencies
         run: |
-          pip install -r backend/requirements.txt
-      - name: Run pytest
+          cd backend
+          pip install -r requirements.txt
+      - name: Run Pytest (optionnel, à ajouter si tu as des tests)
         run: |
-          pytest backend/tests || true   # Ne bloque pas, juste pour reporting
-      - name: Upload pytest results
-        uses: actions/upload-artifact@v4
-        with:
-          name: pytest-results
-          path: backend/tests/
+          echo "Pas de tests unitaires pour l’instant"
+        # Ex : pytest --maxfail=1 --disable-warnings -q
 
-  build_scan_push:
-    name: 🚀 Build, Scan & Push Docker Images
+  docker:
+    name: 🚀 Build, Scan & Push Docker images
     runs-on: ubuntu-latest
-    needs: [security, test]
+    needs: [quality-security, pytest]
+    env:
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Login to DockerHub
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # BACKEND IMAGE
+      # Build and scan backend
       - name: Build backend image
-        run: docker build -t cedricteyc/littlepigs-backend:${{ github.sha }} -t cedricteyc/littlepigs-backend:latest ./backend
+        run: |
+          docker build -t $DOCKERHUB_USERNAME/littlepigs-backend:latest ./backend
 
-      - name: Trivy scan backend image
-        uses: aquasecurity/trivy-action@master
+      - name: Trivy (image) - backend
+        uses: aquasecurity/trivy-action@v0.16.2
         with:
-          image-ref: "cedricteyc/littlepigs-backend:${{ github.sha }}"
-          format: sarif
+          image-ref: "${{ env.DOCKERHUB_USERNAME }}/littlepigs-backend:latest"
+          format: "sarif"
           output: "trivy-backend.sarif"
-          severity: CRITICAL,HIGH,MEDIUM
+          severity: "CRITICAL,HIGH"
 
-      - name: Upload backend scan results
+      # Build and scan frontend
+      - name: Build frontend image
+        run: |
+          docker build -t $DOCKERHUB_USERNAME/littlepigs-frontend:latest ./frontend
+
+      - name: Trivy (image) - frontend
+        uses: aquasecurity/trivy-action@v0.16.2
+        with:
+          image-ref: "${{ env.DOCKERHUB_USERNAME }}/littlepigs-frontend:latest"
+          format: "sarif"
+          output: "trivy-frontend.sarif"
+          severity: "CRITICAL,HIGH"
+
+      # Push images
+      - name: Push backend image
+        run: docker push $DOCKERHUB_USERNAME/littlepigs-backend:latest
+
+      - name: Push frontend image
+        run: docker push $DOCKERHUB_USERNAME/littlepigs-frontend:latest
+
+      # Upload Trivy scan results to GitHub Security tab
+      - name: Upload Trivy scan results (backend)
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: "trivy-backend.sarif"
-
-      - name: Push backend image
-        run: docker push cedricteyc/littlepigs-backend:${{ github.sha }} && docker push cedricteyc/littlepigs-backend:latest
-
-      # FRONTEND IMAGE
-      - name: Build frontend image
-        run: docker build -t cedricteyc/littlepigs-frontend:${{ github.sha }} -t cedricteyc/littlepigs-frontend:latest ./frontend
-
-      - name: Trivy scan frontend image
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: "cedricteyc/littlepigs-frontend:${{ github.sha }}"
-          format: sarif
-          output: "trivy-frontend.sarif"
-          severity: CRITICAL,HIGH,MEDIUM
-
-      - name: Upload frontend scan results
+      - name: Upload Trivy scan results (frontend)
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: "trivy-frontend.sarif"
 
-      - name: Push frontend image
-        run: docker push cedricteyc/littlepigs-frontend:${{ github.sha }} && docker push cedricteyc/littlepigs-frontend:latest
-
+      # Génère un résumé dans l’onglet "Summary"
+      - name: Générer le résumé pipeline
+        run: |
+          echo "### Résumé du run" >> $GITHUB_STEP_SUMMARY
+          echo "Images buildées et poussées :" >> $GITHUB_STEP_SUMMARY
+          echo "- $DOCKERHUB_USERNAME/littlepigs-backend:latest" >> $GITHUB_STEP_SUMMARY
+          echo "- $DOCKERHUB_USERNAME/littlepigs-frontend:latest" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "Pour plus d'infos sécurité, voir l’onglet Security du repo GitHub." >> $GITHUB_STEP_SUMMARY
