--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: DevSecOps CI/CD Pipeline
+name: DevSecOps Pipeline (Trivy, Bandit, Flake8, Pytest, DockerHub)
 
 on:
   push:
@@ -11,119 +11,111 @@ permissions:
   security-events: write
 
 jobs:
-  quality-security:
-    name: 🔎 Security & Quality (Trivy, Bandit, Flake8)
+  security-quality:
+    name: Security & Quality (Trivy, Bandit, Flake8)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Bandit - Python security scan (backend)
-        uses: tj-actions/bandit@v5
-        with:
-          targets: backend/app.py
-
-      - name: Flake8 - Python linter (backend)
-        uses: py-actions/flake8@v2
-        with:
-          args: backend/app.py
-
-      - name: Trivy (filesystem) - Scan codebase
-        uses: aquasecurity/trivy-action@v0.16.2
+      # Trivy Code Scan
+      - name: Run Trivy (filesystem mode)
+        uses: aquasecurity/trivy-action@v0.32.0
         with:
           scan-type: "fs"
           scan-ref: "."
           format: "table"
           severity: "CRITICAL,HIGH"
 
+      # Bandit
+      - name: Run Bandit (Python SAST)
+        uses: tj-actions/bandit@v5
+        with:
+          targets: "./backend,./frontend"
+
+      # Flake8
+      - name: Run Flake8 (lint Python)
+        uses: py-actions/flake8@v2
+        with:
+          path: "./backend ./frontend"
+
   pytest:
-    name: 🧪 Pytest (unit tests)
+    name: Pytest (unit tests)
     runs-on: ubuntu-latest
-    needs: quality-security
+    needs: security-quality
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
       - name: Install backend dependencies
         run: |
-          cd backend
-          pip install -r requirements.txt
-      - name: Run Pytest (optionnel, à ajouter si tu as des tests)
+          python -m pip install --upgrade pip
+          pip install -r backend/requirements.txt
+          pip install pytest
+      - name: Run Pytest
         run: |
-          echo "Pas de tests unitaires pour l’instant"
-        # Ex : pytest --maxfail=1 --disable-warnings -q
+          pytest backend/tests || true
 
-  docker:
-    name: 🚀 Build, Scan & Push Docker images
+  build-docker:
+    name: Build, Scan & Push Docker Images
     runs-on: ubuntu-latest
-    needs: [quality-security, pytest]
+    needs: [pytest]
     env:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      # Build backend image
+      - name: Build backend Docker image
+        run: docker build -t $DOCKERHUB_USERNAME/littlepigs-backend:latest ./backend
 
-      - name: Log in to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # Build frontend image
+      - name: Build frontend Docker image
+        run: docker build -t $DOCKERHUB_USERNAME/littlepigs-frontend:latest ./frontend
 
-      # Build and scan backend
-      - name: Build backend image
-        run: |
-          docker build -t $DOCKERHUB_USERNAME/littlepigs-backend:latest ./backend
-
-      - name: Trivy (image) - backend
-        uses: aquasecurity/trivy-action@v0.16.2
+      # Trivy scan backend Docker image
+      - name: Trivy scan backend Docker image
+        uses: aquasecurity/trivy-action@v0.32.0
         with:
           image-ref: "${{ env.DOCKERHUB_USERNAME }}/littlepigs-backend:latest"
           format: "sarif"
           output: "trivy-backend.sarif"
-          severity: "CRITICAL,HIGH"
+          severity: "CRITICAL,HIGH,MEDIUM"
 
-      # Build and scan frontend
-      - name: Build frontend image
-        run: |
-          docker build -t $DOCKERHUB_USERNAME/littlepigs-frontend:latest ./frontend
-
-      - name: Trivy (image) - frontend
-        uses: aquasecurity/trivy-action@v0.16.2
+      # Trivy scan frontend Docker image
+      - name: Trivy scan frontend Docker image
+        uses: aquasecurity/trivy-action@v0.32.0
         with:
           image-ref: "${{ env.DOCKERHUB_USERNAME }}/littlepigs-frontend:latest"
           format: "sarif"
           output: "trivy-frontend.sarif"
-          severity: "CRITICAL,HIGH"
+          severity: "CRITICAL,HIGH,MEDIUM"
 
-      # Push images
+      # Push images to DockerHub
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ env.DOCKERHUB_TOKEN }}
+
       - name: Push backend image
         run: docker push $DOCKERHUB_USERNAME/littlepigs-backend:latest
 
       - name: Push frontend image
         run: docker push $DOCKERHUB_USERNAME/littlepigs-frontend:latest
 
-      # Upload Trivy scan results to GitHub Security tab
-      - name: Upload Trivy scan results (backend)
+      # Upload Trivy scan results
+      - name: Upload backend SARIF
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: "trivy-backend.sarif"
-      - name: Upload Trivy scan results (frontend)
+
+      - name: Upload frontend SARIF
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: "trivy-frontend.sarif"
-
-      # Génère un résumé dans l’onglet "Summary"
-      - name: Générer le résumé pipeline
-        run: |
-          echo "### Résumé du run" >> $GITHUB_STEP_SUMMARY
-          echo "Images buildées et poussées :" >> $GITHUB_STEP_SUMMARY
-          echo "- $DOCKERHUB_USERNAME/littlepigs-backend:latest" >> $GITHUB_STEP_SUMMARY
-          echo "- $DOCKERHUB_USERNAME/littlepigs-frontend:latest" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "Pour plus d'infos sécurité, voir l’onglet Security du repo GitHub." >> $GITHUB_STEP_SUMMARY
-#
