--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,4 +1,4 @@
-name: DevSecOps Pipeline (Trivy, Bandit, Flake8, Pytest, DockerHub)
+name: DevSecOps Pipeline
 
 on:
   push:
@@ -11,38 +11,35 @@ permissions:
   security-events: write
 
 jobs:
-  security-quality:
+  security_quality:
     name: Security & Quality (Trivy, Bandit, Flake8)
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Trivy Code Scan
-      - name: Run Trivy (filesystem mode)
-        uses: aquasecurity/trivy-action@v0.32.0
+      - name: Trivy filesystem scan
+        uses: aquasecurity/trivy-action@main
         with:
           scan-type: "fs"
           scan-ref: "."
           format: "table"
           severity: "CRITICAL,HIGH"
 
-      # Bandit
-      - name: Run Bandit (Python SAST)
+      - name: Bandit security scan (Python)
         uses: tj-actions/bandit@v5
         with:
-          targets: "./backend,./frontend"
+          targets: "./backend"
 
-      # Flake8
-      - name: Run Flake8 (lint Python)
+      - name: Flake8 linter
         uses: py-actions/flake8@v2
         with:
-          path: "./backend ./frontend"
+          path: "./backend"
 
   pytest:
     name: Pytest (unit tests)
     runs-on: ubuntu-latest
-    needs: security-quality
+    needs: security_quality
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -50,16 +47,14 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - name: Install backend dependencies
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r backend/requirements.txt
           pip install pytest
-      - name: Run Pytest
-        run: |
-          pytest backend/tests || true
+      - name: Run pytest
+        run: pytest backend/tests || true  # Retire || true si tu veux que ça bloque sur test fail
 
-  build-docker:
+  build_docker:
     name: Build, Scan & Push Docker Images
     runs-on: ubuntu-latest
     needs: [pytest]
@@ -70,38 +65,36 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Build backend image
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ env.DOCKERHUB_TOKEN }}
+
       - name: Build backend Docker image
         run: docker build -t $DOCKERHUB_USERNAME/littlepigs-backend:latest ./backend
 
-      # Build frontend image
       - name: Build frontend Docker image
         run: docker build -t $DOCKERHUB_USERNAME/littlepigs-frontend:latest ./frontend
 
-      # Trivy scan backend Docker image
       - name: Trivy scan backend Docker image
-        uses: aquasecurity/trivy-action@v0.32.0
+        uses: aquasecurity/trivy-action@main
         with:
           image-ref: "${{ env.DOCKERHUB_USERNAME }}/littlepigs-backend:latest"
           format: "sarif"
           output: "trivy-backend.sarif"
           severity: "CRITICAL,HIGH,MEDIUM"
 
-      # Trivy scan frontend Docker image
       - name: Trivy scan frontend Docker image
-        uses: aquasecurity/trivy-action@v0.32.0
+        uses: aquasecurity/trivy-action@main
         with:
           image-ref: "${{ env.DOCKERHUB_USERNAME }}/littlepigs-frontend:latest"
           format: "sarif"
           output: "trivy-frontend.sarif"
           severity: "CRITICAL,HIGH,MEDIUM"
-
-      # Push images to DockerHub
-      - name: Login to DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ env.DOCKERHUB_USERNAME }}
-          password: ${{ env.DOCKERHUB_TOKEN }}
 
       - name: Push backend image
         run: docker push $DOCKERHUB_USERNAME/littlepigs-backend:latest
@@ -109,7 +102,6 @@ jobs:
       - name: Push frontend image
         run: docker push $DOCKERHUB_USERNAME/littlepigs-frontend:latest
 
-      # Upload Trivy scan results
       - name: Upload backend SARIF
         uses: github/codeql-action/upload-sarif@v3
         with:
