Ajout pipeline CI/CD complète avec déploiement Docker Swarm automatisé

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -130,7 +130,7 @@ jobs:
 
   deploy_cluster:
     name: Deploy Cluster (Docker Swarm)
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     needs: [build_docker]
     env:
       SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
