--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,6 @@ services:
       DB_NAME: logmeindb
       DB_USER: postgres
       DB_PASSWORD: postgres
-    # Expose le port 5000 sur ta machine (localhost:5000 -> container:5000)
     ports:
       - "5000:5000"
     depends_on:
@@ -30,11 +29,8 @@ services:
     restart: always
 
   nginx:
-    image: nginx:alpine
+    image: cedricteyc/littlepigs-nginx:latest  # image personnalisée à utiliser
     restart: always
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./frontend:/usr/share/nginx/html:ro
     ports:
       - "3000:80"
     depends_on:
@@ -43,4 +39,3 @@ services:
 
 volumes:
   pgdata:
-  # Pour test
