--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,26 +15,21 @@ jobs:
     name: Security & Quality (Trivy CLI, Bandit, Flake8)
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v3
       - name: Install Trivy
         run: |
           sudo apt-get update && sudo apt-get install -y wget
           wget https://github.com/aquasecurity/trivy/releases/download/v0.50.2/trivy_0.50.2_Linux-64bit.deb
           sudo dpkg -i trivy_0.50.2_Linux-64bit.deb
-
       - name: Trivy scan codebase (SCA + vuln + secrets)
         run: |
           trivy fs --exit-code 0 --severity CRITICAL,HIGH,MEDIUM --format table --scanners vuln,secret,config .
         continue-on-error: true
-
       - name: Bandit security scan (Python)
         uses: tj-actions/bandit@v5
         continue-on-error: true
         with:
           targets: "./backend"
-
       - name: Flake8 linter
         uses: py-actions/flake8@v2
         continue-on-error: true
@@ -46,10 +41,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: security_quality
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
       - name: Install dependencies
@@ -67,74 +60,62 @@ jobs:
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
       DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to DockerHub
-        uses: docker/login-action@v3
+      - uses: actions/checkout@v3
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/login-action@v3
         with:
           username: ${{ env.DOCKERHUB_USERNAME }}
           password: ${{ env.DOCKERHUB_TOKEN }}
-
       - name: Build backend Docker image
         run: docker build -t $DOCKERHUB_USERNAME/littlepigs-backend:latest ./backend
-
       - name: Build frontend Docker image
         run: docker build -t $DOCKERHUB_USERNAME/littlepigs-frontend:latest ./frontend
-
       - name: Build nginx Docker image
         run: docker build -t $DOCKERHUB_USERNAME/littlepigs-nginx:latest -f ./nginx/Dockerfile .
-
       - name: Install Trivy
         run: |
           sudo apt-get update && sudo apt-get install -y wget
           wget https://github.com/aquasecurity/trivy/releases/download/v0.50.2/trivy_0.50.2_Linux-64bit.deb
           sudo dpkg -i trivy_0.50.2_Linux-64bit.deb
-
       - name: Trivy scan backend Docker image
         run: |
           trivy image --exit-code 0 --severity CRITICAL,HIGH,MEDIUM --format sarif -o trivy-backend.sarif $DOCKERHUB_USERNAME/littlepigs-backend:latest
         continue-on-error: true
-
       - name: Trivy scan frontend Docker image
         run: |
           trivy image --exit-code 0 --severity CRITICAL,HIGH,MEDIUM --format sarif -o trivy-frontend.sarif $DOCKERHUB_USERNAME/littlepigs-frontend:latest
         continue-on-error: true
-
       - name: Trivy scan nginx Docker image
         run: |
           trivy image --exit-code 0 --severity CRITICAL,HIGH,MEDIUM --format sarif -o trivy-nginx.sarif $DOCKERHUB_USERNAME/littlepigs-nginx:latest
         continue-on-error: true
-
       - name: Push backend image
         run: docker push $DOCKERHUB_USERNAME/littlepigs-backend:latest
-
       - name: Push frontend image
         run: docker push $DOCKERHUB_USERNAME/littlepigs-frontend:latest
-
       - name: Push nginx image
         run: docker push $DOCKERHUB_USERNAME/littlepigs-nginx:latest
-
-      - name: Upload backend SARIF
-        uses: github/codeql-action/upload-sarif@v3
+      - uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: "trivy-backend.sarif"
           category: "trivy-backend"
-
-      - name: Upload frontend SARIF
-        uses: github/codeql-action/upload-sarif@v3
+      - uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: "trivy-frontend.sarif"
           category: "trivy-frontend"
-
-      - name: Upload nginx SARIF
-        uses: github/codeql-action/upload-sarif@v3
+      - uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: "trivy-nginx.sarif"
           category: "trivy-nginx"
+      - name: Generate CI Summary
+        if: always()
+        run: |
+          echo '## CI/CD Job Summary' >> $GITHUB_STEP_SUMMARY
+          echo '### Backend Image: `${{ env.DOCKERHUB_USERNAME }}/littlepigs-backend:latest`' >> $GITHUB_STEP_SUMMARY
+          echo '### Frontend Image: `${{ env.DOCKERHUB_USERNAME }}/littlepigs-frontend:latest`' >> $GITHUB_STEP_SUMMARY
+          echo '### Nginx Image: `${{ env.DOCKERHUB_USERNAME }}/littlepigs-nginx:latest`' >> $GITHUB_STEP_SUMMARY
+          echo '### Security Scans: Trivy, Bandit, Flake8' >> $GITHUB_STEP_SUMMARY
+          echo 'Badges visible in README. Full reports available in GitHub Security tab.'
 
   deploy_cluster:
     name: Deploy Cluster (Docker Swarm)
@@ -147,12 +128,9 @@ jobs:
       SSH_USER: ${{ secrets.SSH_USER }}
     steps:
       - uses: actions/checkout@v3
-
-      - name: Setup SSH key
-        uses: webfactory/ssh-agent@v0.5.4
+      - uses: webfactory/ssh-agent@v0.5.4
         with:
           ssh-private-key: ${{ env.SSH_PRIVATE_KEY }}
-
       - name: Install yq
         run: |
           wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O ./yq
@@ -160,7 +138,6 @@ jobs:
           mkdir -p $HOME/.local/bin
           mv ./yq $HOME/.local/bin/yq
           echo "$HOME/.local/bin" >> $GITHUB_PATH
-
       - name: Deploy Cluster script
         run: |
           chmod +x ./scripts/deploy_cluster.sh
