--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - pgdata:/var/lib/postgresql/data
 
   backend:
-    build: ./backend
+    image: cedricteyc/littlepigs-backend:latest
     restart: always
     environment:
       DB_HOST: db
@@ -25,11 +25,11 @@ services:
       - db
 
   frontend:
-    build: ./frontend
+    image: cedricteyc/littlepigs-frontend:latest
     restart: always
 
   nginx:
-    image: cedricteyc/littlepigs-nginx:latest  # image personnalisée à utiliser
+    image: cedricteyc/littlepigs-nginx:latest
     restart: always
     ports:
       - "3000:80"
@@ -39,4 +39,3 @@ services:
 
 volumes:
   pgdata:
-# Test
